create Tfid class

--- a/example/predics_tags.ipynb
+++ b/example/predics_tags.ipynb
@@ -28,7 +28,7 @@
     "from torchvision import transforms\n",
     "import networkx as nx\n",
     "\n",
-    "from models import BoWClassifier\n",
+    "from models import BoWClassifier, Tfid\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -177,10 +177,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "dsets['train'].process_data(lemmalize = False, stem = False)"
@@ -188,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +298,7 @@
        "4  are cases splicing machinery constructs mrna e...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -614,43 +612,12 @@
    },
    "outputs": [],
    "source": [
-    "def get_frequency(title):\n",
-    "    \n",
-    "    frequency = []\n",
-    "    inverse_frequency = {}\n",
-    "    for i in range(len(title)):\n",
-    "        word_count = {}\n",
-    "\n",
-    "        for word in title[i].split():\n",
-    "            if word in word_count:    \n",
-    "                word_count[word] = word_count[word] + 1\n",
-    "            else:\n",
-    "                word_count[word] = 1\n",
-    "                \n",
-    "        for word in word_count:\n",
-    "            if word in inverse_frequency:\n",
-    "                inverse_frequency[word] = inverse_frequency[word] + 1\n",
-    "            else:\n",
-    "                inverse_frequency[word] = 1            \n",
-    "        frequency.append(word_count)\n",
-    "        \n",
-    "    return (frequency, inverse_frequency)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
     "dsets['test'].process_data(lemmalize = False, stem = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +716,7 @@
        "4  hamilton's principle states dynamic system alw...  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,27 +727,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "frequency, inverse_frequency = get_frequency(dsets['test'].data.data)"
+    "tfid = Tfid\n",
+    "tfid.get_frequency(dsets['test'].data.data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "tfidf = frequency"
+    "tfidf = tfid.frequency"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +777,7 @@
        " ('motion', 1)]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -847,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +882,7 @@
        "4   9  principle action integral stationary hamilton's"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
