improved score suing the title information

--- a/example/predics_tags.ipynb
+++ b/example/predics_tags.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -16,6 +16,8 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import datetime\n",
+    "\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -177,16 +179,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dsets['train'].process_data(lemmalize = False, stem = False)"
+    "dsets['train'].process_data(col = 'title', lemmalize = False, stem = False)\n",
+    "dsets['train'].process_data(col = 'content', lemmalize = False, stem = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +218,8 @@
        "      <th>content</th>\n",
        "      <th>tags</th>\n",
        "      <th>subject</th>\n",
-       "      <th>data</th>\n",
+       "      <th>title_data</th>\n",
+       "      <th>content_data</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -226,6 +230,7 @@
        "      <td>&lt;p&gt;In prokaryotic translation, how critical fo...</td>\n",
        "      <td>ribosome binding-sites translation synthetic-b...</td>\n",
        "      <td>biology</td>\n",
+       "      <td>what criticality ribosome binding site relativ...</td>\n",
        "      <td>in prokaryotic translation critical efficient ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -235,6 +240,7 @@
        "      <td>&lt;p&gt;Does anyone have any suggestions to prevent...</td>\n",
        "      <td>rna biochemistry</td>\n",
        "      <td>biology</td>\n",
+       "      <td>how rnase contamination rna based experiments ...</td>\n",
        "      <td>does anyone suggestions prevent rnase contamin...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -244,6 +250,7 @@
        "      <td>&lt;p&gt;Tortora writes in &lt;em&gt;Principles of Anatomy...</td>\n",
        "      <td>immunology cell-biology hematology</td>\n",
        "      <td>biology</td>\n",
+       "      <td>are lymphocyte sizes clustered two groups</td>\n",
        "      <td>tortora writes principles anatomy physiology l...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -253,6 +260,7 @@
        "      <td>&lt;p&gt;Various people in our lab will prepare a li...</td>\n",
        "      <td>cell-culture</td>\n",
        "      <td>biology</td>\n",
+       "      <td>how long antibiotic-dosed lb maintain good sel...</td>\n",
        "      <td>various people lab prepare liter lb add kanamy...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -262,6 +270,7 @@
        "      <td>&lt;p&gt;Are there any cases in which the splicing m...</td>\n",
        "      <td>splicing mrna spliceosome introns exons</td>\n",
        "      <td>biology</td>\n",
+       "      <td>is exon order always preserved splicing</td>\n",
        "      <td>are cases splicing machinery constructs mrna e...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -290,7 +299,14 @@
        "3                                       cell-culture  biology   \n",
        "4            splicing mrna spliceosome introns exons  biology   \n",
        "\n",
-       "                                                data  \n",
+       "                                          title_data  \\\n",
+       "0  what criticality ribosome binding site relativ...   \n",
+       "1  how rnase contamination rna based experiments ...   \n",
+       "2          are lymphocyte sizes clustered two groups   \n",
+       "3  how long antibiotic-dosed lb maintain good sel...   \n",
+       "4            is exon order always preserved splicing   \n",
+       "\n",
+       "                                        content_data  \n",
        "0  in prokaryotic translation critical efficient ...  \n",
        "1  does anyone suggestions prevent rnase contamin...  \n",
        "2  tortora writes principles anatomy physiology l...  \n",
@@ -298,7 +314,7 @@
        "4  are cases splicing machinery constructs mrna e...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +332,7 @@
    "outputs": [],
    "source": [
     "g_tags = WordsGraph(dsets['train'].data)\n",
-    "g_data = WordsGraph(dsets['train'].data, col = 'content', weight = 500)"
+    "g_data = WordsGraph(dsets['train'].data, col = 'content_data', weight = 500)"
    ]
   },
   {
@@ -505,7 +521,8 @@
        "      <th>content</th>\n",
        "      <th>tags</th>\n",
        "      <th>subject</th>\n",
-       "      <th>data</th>\n",
+       "      <th>title_data</th>\n",
+       "      <th>content_data</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -516,6 +533,7 @@
        "      <td>&lt;p&gt;In prokaryotic translation, how critical fo...</td>\n",
        "      <td>ribosome binding-sites translation synthetic-b...</td>\n",
        "      <td>biology</td>\n",
+       "      <td>what criticality ribosome binding site relativ...</td>\n",
        "      <td>in prokaryotic translation critical efficient ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -525,6 +543,7 @@
        "      <td>&lt;p&gt;Does anyone have any suggestions to prevent...</td>\n",
        "      <td>rna biochemistry</td>\n",
        "      <td>biology</td>\n",
+       "      <td>how rnase contamination rna based experiments ...</td>\n",
        "      <td>does anyone suggestions prevent rnase contamin...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -534,6 +553,7 @@
        "      <td>&lt;p&gt;Tortora writes in &lt;em&gt;Principles of Anatomy...</td>\n",
        "      <td>immunology cell-biology hematology</td>\n",
        "      <td>biology</td>\n",
+       "      <td>are lymphocyte sizes clustered two groups</td>\n",
        "      <td>tortora writes principles anatomy physiology l...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -543,6 +563,7 @@
        "      <td>&lt;p&gt;Various people in our lab will prepare a li...</td>\n",
        "      <td>cell-culture</td>\n",
        "      <td>biology</td>\n",
+       "      <td>how long antibiotic-dosed lb maintain good sel...</td>\n",
        "      <td>various people lab prepare liter lb add kanamy...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -552,6 +573,7 @@
        "      <td>&lt;p&gt;Are there any cases in which the splicing m...</td>\n",
        "      <td>splicing mrna spliceosome introns exons</td>\n",
        "      <td>biology</td>\n",
+       "      <td>is exon order always preserved splicing</td>\n",
        "      <td>are cases splicing machinery constructs mrna e...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -580,7 +602,14 @@
        "3                                       cell-culture  biology   \n",
        "4            splicing mrna spliceosome introns exons  biology   \n",
        "\n",
-       "                                                data  \n",
+       "                                          title_data  \\\n",
+       "0  what criticality ribosome binding site relativ...   \n",
+       "1  how rnase contamination rna based experiments ...   \n",
+       "2          are lymphocyte sizes clustered two groups   \n",
+       "3  how long antibiotic-dosed lb maintain good sel...   \n",
+       "4            is exon order always preserved splicing   \n",
+       "\n",
+       "                                        content_data  \n",
        "0  in prokaryotic translation critical efficient ...  \n",
        "1  does anyone suggestions prevent rnase contamin...  \n",
        "2  tortora writes principles anatomy physiology l...  \n",
@@ -612,7 +641,8 @@
    },
    "outputs": [],
    "source": [
-    "dsets['test'].process_data(lemmalize = False, stem = False)"
+    "dsets['test'].process_data(col = 'title', lemmalize = False, stem = False)\n",
+    "dsets['test'].process_data(col = 'content', lemmalize = False, stem = False)"
    ]
   },
   {
@@ -645,7 +675,8 @@
        "      <th>title</th>\n",
        "      <th>content</th>\n",
        "      <th>subject</th>\n",
-       "      <th>data</th>\n",
+       "      <th>title_data</th>\n",
+       "      <th>content_data</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -655,6 +686,7 @@
        "      <td>What is spin as it relates to subatomic partic...</td>\n",
        "      <td>&lt;p&gt;I often hear about subatomic particles havi...</td>\n",
        "      <td>None</td>\n",
+       "      <td>what spin relates subatomic particles</td>\n",
        "      <td>i often hear subatomic particles property call...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -663,6 +695,7 @@
        "      <td>What is your simplest explanation of the strin...</td>\n",
        "      <td>&lt;p&gt;How would you explain string theory to non ...</td>\n",
        "      <td>None</td>\n",
+       "      <td>what simplest explanation string theory</td>\n",
        "      <td>how would explain string theory non physicists...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -671,6 +704,7 @@
        "      <td>Lie theory, Representations and particle physics</td>\n",
        "      <td>&lt;p&gt;This is a question that has been posted at ...</td>\n",
        "      <td>None</td>\n",
+       "      <td>lie theory representations particle physics</td>\n",
        "      <td>this question posted many different forums i t...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -679,6 +713,7 @@
        "      <td>Will Determinism be ever possible?</td>\n",
        "      <td>&lt;p&gt;What are the main problems that we need to ...</td>\n",
        "      <td>None</td>\n",
+       "      <td>will determinism ever possible</td>\n",
        "      <td>what main problems need solve prove laplace's ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -687,6 +722,7 @@
        "      <td>Hamilton's Principle</td>\n",
        "      <td>&lt;p&gt;Hamilton's principle states that a dynamic ...</td>\n",
        "      <td>None</td>\n",
+       "      <td>hamilton's principle</td>\n",
        "      <td>hamilton's principle states dynamic system alw...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -708,7 +744,14 @@
        "3  <p>What are the main problems that we need to ...    None   \n",
        "4  <p>Hamilton's principle states that a dynamic ...    None   \n",
        "\n",
-       "                                                data  \n",
+       "                                    title_data  \\\n",
+       "0        what spin relates subatomic particles   \n",
+       "1      what simplest explanation string theory   \n",
+       "2  lie theory representations particle physics   \n",
+       "3               will determinism ever possible   \n",
+       "4                         hamilton's principle   \n",
+       "\n",
+       "                                        content_data  \n",
        "0  i often hear subatomic particles property call...  \n",
        "1  how would explain string theory non physicists...  \n",
        "2  this question posted many different forums i t...  \n",
@@ -727,40 +770,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tfid = Tfid\n",
-    "tfid.get_frequency(dsets['test'].data.data)"
+    "tfid = Tfid(dsets['test'].data.content_data.values + ' ' + dsets['test'].data.title_data.values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "tfid.get_frequency()\n",
     "tfidf = tfid.frequency"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('spin', 3),\n",
-       " ('particles', 2),\n",
+       "[('spin', 4),\n",
+       " ('particles', 3),\n",
+       " ('subatomic', 2),\n",
        " ('spinning', 2),\n",
+       " ('what', 2),\n",
        " ('i', 1),\n",
        " ('often', 1),\n",
        " ('hear', 1),\n",
-       " ('subatomic', 1),\n",
        " ('property', 1),\n",
        " ('called', 1),\n",
        " ('also', 1),\n",
@@ -771,28 +813,27 @@
        " ('would', 1),\n",
        " ('think', 1),\n",
        " ('which', 1),\n",
-       " ('what', 1),\n",
        " ('mean', 1),\n",
        " ('actual', 1),\n",
-       " ('motion', 1)]"
+       " ('motion', 1),\n",
+       " ('relates', 1)]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import operator\n",
-    "index = 0\n",
-    "\n",
-    "sorted(tfidf[index].items(), key=operator.itemgetter(1), reverse=True)"
+    "tfid.get_item(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "top = 5\n",
@@ -804,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -815,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -847,27 +888,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>spin particles spinning i often</td>\n",
+       "      <td>spin particles subatomic spinning what</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>how would explain string theory</td>\n",
+       "      <td>string theory how would explain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>i group acting question thought</td>\n",
+       "      <td>i group acting lie question</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>7</td>\n",
-       "      <td>what main problems need solve</td>\n",
+       "      <td>determinism what main problems need</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>9</td>\n",
-       "      <td>principle action integral stationary hamilton's</td>\n",
+       "      <td>principle hamilton's action integral stationary</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -875,14 +916,14 @@
       ],
       "text/plain": [
        "   id                                             tags\n",
-       "0   1                  spin particles spinning i often\n",
-       "1   2                  how would explain string theory\n",
-       "2   3                  i group acting question thought\n",
-       "3   7                    what main problems need solve\n",
-       "4   9  principle action integral stationary hamilton's"
+       "0   1           spin particles subatomic spinning what\n",
+       "1   2                  string theory how would explain\n",
+       "2   3                      i group acting lie question\n",
+       "3   7              determinism what main problems need\n",
+       "4   9  principle hamilton's action integral stationary"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,13 +934,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_submission_file(info, df):\n",
+    "    now = datetime.datetime.now()\n",
+    "    if not os.path.isdir('../subm'):\n",
+    "        os.mkdir('../subm')\n",
+    "    suffix = info + '_' + str(now.strftime(\"%Y-%m-%d-%H-%M\"))\n",
+    "    sub_file = os.path.join('../subm', 'submission_' + suffix + '.csv')\n",
+    "    df.to_csv(sub_file, index=False)\n",
+    "    print('done!')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "output_unsupervised_df.to_csv('tfid_submission.csv', index=False) "
+    "create_submission_file('tfid', output_unsupervised_df)"
    ]
   },
   {
