drop duplicate words

--- a/example/predics_tags.ipynb
+++ b/example/predics_tags.ipynb
@@ -770,6 +770,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dsets['test'].data['teste'] = dsets['test'].data.content_data.apply(lambda x: ' '.join(set(x.split())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'i often hear subatomic particles property called spin also actually relate spinning axis like would think which particles spin what spin mean actual spinning motion'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dsets['test'].data['content_data'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'called spinning also i think what like often actually relate property hear particles axis spin would actual subatomic motion mean which'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dsets['test'].data['teste'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
@@ -830,13 +879,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "top = 5\n",
+    "top = 3\n",
     "output = []\n",
     "for i in range(0,len(dsets['test'].data)):\n",
     "    prediction = sorted(tfidf[i], key=tfidf[i].get, reverse=True)[0:top]\n",
@@ -845,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -856,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -888,42 +937,42 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>spin particles subatomic spinning what</td>\n",
+       "      <td>spin particles subatomic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>string theory how would explain</td>\n",
+       "      <td>string theory how</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>i group acting lie question</td>\n",
+       "      <td>i group acting</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>7</td>\n",
-       "      <td>determinism what main problems need</td>\n",
+       "      <td>determinism what main</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>9</td>\n",
-       "      <td>principle hamilton's action integral stationary</td>\n",
+       "      <td>principle hamilton's action</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id                                             tags\n",
-       "0   1           spin particles subatomic spinning what\n",
-       "1   2                  string theory how would explain\n",
-       "2   3                      i group acting lie question\n",
-       "3   7              determinism what main problems need\n",
-       "4   9  principle hamilton's action integral stationary"
+       "   id                         tags\n",
+       "0   1     spin particles subatomic\n",
+       "1   2            string theory how\n",
+       "2   3               i group acting\n",
+       "3   7        determinism what main\n",
+       "4   9  principle hamilton's action"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,11 +999,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done!\n"
+     ]
+    }
+   ],
    "source": [
     "create_submission_file('tfid', output_unsupervised_df)"
    ]
